fix: fixed modal scrollbar-width

--- a/apps/head-office/src/components/Modal/Modal.scss
+++ b/apps/head-office/src/components/Modal/Modal.scss
@@ -5,6 +5,12 @@ input::-webkit-inner-spin-button {
 }
 
 /* Firefox */
-input[type=number] {
+input[type='number'] {
   -moz-appearance: textfield;
+}
+
+.sh-modal-container {
+  overflow-y: scroll;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
